--- a/index.html
+++ b/index.html
@@ -1645,7 +1645,7 @@
         // 연락처(브라질): WhatsApp/전화 링크가 잘 되려면 국가코드 포함 추천 (+55 ...)
         phone: { groom: "+55 11 98145-1081", bride: "+55 11 98811-2997" },
         gift: {
-          groomHolder: "Haseung Song (Nubank)",
+          groomHolder: "Haseung Song (Bradesco)",
           groomBank: "70399339183",
           brideHolder: "Larissa Vilas Boas de Araujo (Nubank)",
           brideBank: "32346800864",
@@ -3087,3 +3087,4 @@ END:VCALENDAR`;
     </script>
   </body>
 </html>
+
