--- a/index.html
+++ b/index.html
@@ -1485,7 +1485,7 @@
         <div class="wrap">
           <div class="card" style="text-align: center">
             <div class="muted" style="font-size: 13px; line-height: 1.8" data-i18n-html="section.footer.note">
-              Esta página é um único `index.html`, pronta para GitHub Pages.
+              Agradecemos de coração por celebrarem o nosso casamento.
             </div>
           </div>
         </div>
@@ -3087,4 +3087,5 @@ END:VCALENDAR`;
     </script>
   </body>
 </html>
+
 
