--- a/index.html
+++ b/index.html
@@ -1720,7 +1720,7 @@
           },
           data: {
             local: "Evento ao ar livre – sapato confortável recomendado",
-            shared: "Dados: compartilhado (Firebase)",
+            shared: "Detalhes do nosso grande dia",
             noteLocal: "Modo local. Para juntar participação de todos, ative o modo compartilhado (Firebase). (Veja o README)",
             noteShared: "Modo compartilhado. A participação de todos aparece em tempo real.",
             hintLocal: "No modo local, salva apenas neste dispositivo. No modo compartilhado (Firebase), soma respostas de todos.",
@@ -1740,7 +1740,7 @@
               title: "Presentes",
               sub: "Sua presença já é muito especial para nós. Caso deseje nos presentear, uma contribuição via PIX será recebida com carinho.",
             },
-            footer: { note: "Esta página é um único `index.html`, pronta para GitHub Pages." },
+            footer: { note: "Agradecemos de coração por celebrarem o nosso casamento." },
           },
           info: {
             dateLabel: "Data",
@@ -3087,5 +3087,6 @@ END:VCALENDAR`;
     </script>
   </body>
 </html>
+
 
 
